packages/typ/tests/fixtures/diagnostics/0215_adt_recursive_tree_payload_mismatch_08.ml.expected
File "0215_adt_recursive_tree_payload_mismatch_08.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0215_adt_recursive_tree_payload_mismatch_08 is not a valid module name.

File "0215_adt_recursive_tree_payload_mismatch_08.ml", line 5, characters 26-30:
5 |   Node_theta (Leaf_theta, true, Leaf_theta)
                              ^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
