packages/typ/tests/fixtures/diagnostics/0215_adt_recursive_tree_payload_mismatch_08.ml
type 'a tree_theta =
  | Leaf_theta
  | Node_theta of 'a tree_theta * 'a * 'a tree_theta
let _ : int tree_theta =
  Node_theta (Leaf_theta, true, Leaf_theta)
